chaged_colors_mainToolbar_logo_loginToolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">MarkDirect</string>
-    <string name="title_activity_general">GeneralActivity</string>
+    <string name="app_name">Activa</string>
+    <string name="title_activity_general">Ofertas Generales</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
